crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_multiple_nested_functions_same_scope.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
assertion_line: 433
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
      type_params: []
      params: []
      return_type:
        Named:
          - number
          - start: 23
            end: 29
      predicate: ~
      body:
        statements:
          - FunctionDecl:
              name:
                name: add
                span:
                  start: 47
                  end: 50
              type_params: []
              params:
                - name:
                    name: a
                    span:
                      start: 51
                      end: 52
                  type_ref:
                    Named:
                      - number
                      - start: 54
                        end: 60
                  span:
                    start: 51
                    end: 60
                - name:
                    name: b
                    span:
                      start: 62
                      end: 63
                  type_ref:
                    Named:
                      - number
                      - start: 65
                        end: 71
                  span:
                    start: 62
                    end: 71
              return_type:
                Named:
                  - number
                  - start: 76
                    end: 82
              predicate: ~
              body:
                statements:
                  - Return:
                      value:
                        Binary:
                          op: Add
                          left:
                            Identifier:
                              name: a
                              span:
                                start: 108
                                end: 109
                          right:
                            Identifier:
                              name: b
                              span:
                                start: 112
                                end: 113
                          span:
                            start: 108
                            end: 113
                      span:
                        start: 101
                        end: 114
                span:
                  start: 83
                  end: 128
              span:
                start: 44
                end: 128
          - FunctionDecl:
              name:
                name: multiply
                span:
                  start: 144
                  end: 152
              type_params: []
              params:
                - name:
                    name: a
                    span:
                      start: 153
                      end: 154
                  type_ref:
                    Named:
                      - number
                      - start: 156
                        end: 162
                  span:
                    start: 153
                    end: 162
                - name:
                    name: b
                    span:
                      start: 164
                      end: 165
                  type_ref:
                    Named:
                      - number
                      - start: 167
                        end: 173
                  span:
                    start: 164
                    end: 173
              return_type:
                Named:
                  - number
                  - start: 178
                    end: 184
              predicate: ~
              body:
                statements:
                  - Return:
                      value:
                        Binary:
                          op: Mul
                          left:
                            Identifier:
                              name: a
                              span:
                                start: 210
                                end: 211
                          right:
                            Identifier:
                              name: b
                              span:
                                start: 214
                                end: 215
                          span:
                            start: 210
                            end: 215
                      span:
                        start: 203
                        end: 216
                span:
                  start: 185
                  end: 230
              span:
                start: 141
                end: 230
          - Return:
              value:
                Call:
                  callee:
                    Identifier:
                      name: add
                      span:
                        start: 250
                        end: 253
                  args:
                    - Literal:
                        - Number: 2
                        - start: 254
                          end: 255
                    - Call:
                        callee:
                          Identifier:
                            name: multiply
                            span:
                              start: 257
                              end: 265
                        args:
                          - Literal:
                              - Number: 3
                              - start: 266
                                end: 267
                          - Literal:
                              - Number: 4
                              - start: 269
                                end: 270
                        span:
                          start: 257
                          end: 271
                  span:
                    start: 250
                    end: 272
              span:
                start: 243
                end: 273
        span:
          start: 30
          end: 283
      span:
        start: 9
        end: 283
