crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_multiple_statements.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: false
        name:
          name: x
          span:
            start: 4
            end: 5
        type_ref: ~
        init:
          Literal:
            - Number: 1
            - start: 8
              end: 9
        span:
          start: 0
          end: 10
  - Statement:
      VarDecl:
        mutable: false
        name:
          name: y
          span:
            start: 15
            end: 16
        type_ref: ~
        init:
          Literal:
            - Number: 2
            - start: 19
              end: 20
        span:
          start: 11
          end: 21
  - Statement:
      VarDecl:
        mutable: false
        name:
          name: z
          span:
            start: 26
            end: 27
        type_ref: ~
        init:
          Binary:
            op: Add
            left:
              Identifier:
                name: x
                span:
                  start: 30
                  end: 31
            right:
              Identifier:
                name: y
                span:
                  start: 34
                  end: 35
            span:
              start: 30
              end: 35
        span:
          start: 22
          end: 36
