crates/atlas-runtime/tests/snapshots/frontend_syntax__parse_nested_function_in_for_block.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
assertion_line: 415
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
      type_params: []
      params: []
      return_type:
        Named:
          - void
          - start: 23
            end: 27
      predicate: ~
      body:
        statements:
          - For:
              init:
                VarDecl:
                  mutable: true
                  name:
                    name: i
                    span:
                      start: 51
                      end: 52
                  type_ref:
                    Named:
                      - number
                      - start: 54
                        end: 60
                  init:
                    Literal:
                      - Number: 0
                      - start: 63
                        end: 64
                  span:
                    start: 47
                    end: 65
              cond:
                Binary:
                  op: Lt
                  left:
                    Identifier:
                      name: i
                      span:
                        start: 66
                        end: 67
                  right:
                    Literal:
                      - Number: 5
                      - start: 70
                        end: 71
                  span:
                    start: 66
                    end: 71
              step:
                Increment:
                  target:
                    Name:
                      name: i
                      span:
                        start: 73
                        end: 74
                  span:
                    start: 73
                    end: 74
              body:
                statements:
                  - FunctionDecl:
                      name:
                        name: log
                        span:
                          start: 99
                          end: 102
                      type_params: []
                      params:
                        - name:
                            name: x
                            span:
                              start: 103
                              end: 104
                          type_ref:
                            Named:
                              - number
                              - start: 106
                                end: 112
                          span:
                            start: 103
                            end: 112
                      return_type:
                        Named:
                          - void
                          - start: 117
                            end: 121
                      predicate: ~
                      body:
                        statements:
                          - Expr:
                              expr:
                                Call:
                                  callee:
                                    Identifier:
                                      name: print
                                      span:
                                        start: 144
                                        end: 149
                                  args:
                                    - Call:
                                        callee:
                                          Identifier:
                                            name: str
                                            span:
                                              start: 150
                                              end: 153
                                        args:
                                          - Identifier:
                                              name: x
                                              span:
                                                start: 154
                                                end: 155
                                        span:
                                          start: 150
                                          end: 156
                                  span:
                                    start: 144
                                    end: 157
                              span:
                                start: 144
                                end: 158
                        span:
                          start: 122
                          end: 176
                      span:
                        start: 96
                        end: 176
                  - Expr:
                      expr:
                        Call:
                          callee:
                            Identifier:
                              name: log
                              span:
                                start: 193
                                end: 196
                          args:
                            - Identifier:
                                name: i
                                span:
                                  start: 197
                                  end: 198
                          span:
                            start: 193
                            end: 199
                      span:
                        start: 193
                        end: 200
                span:
                  start: 78
                  end: 214
              span:
                start: 42
                end: 214
        span:
          start: 28
          end: 224
      span:
        start: 9
        end: 224
